# housing_prediction_app

./: .stestr.conf  Jenkinsfile  LICENSE  README.md  setup.cfg  tox.ini
housing_prediction_app/: api.py
housing_prediction_app/tests/: test_api.py
