# -*- coding: utf-8 -*-
[metadata]
name = housing_prediction_app
summary = 
description-file =
    README.md
author = Lisana
author-email = 
version = 0.0.1
license = MIT
home-page = https://github.com/deephdc/housing_prediction_app
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    housing_prediction_app

[entry_points]
deepaas.v2.model =
    housing_prediction_app = housing_prediction_app.api
